menu items added, menu not visible issue solved, padding added for icons , menu not active visible is added

--- a/styles/layout/custom.scss
+++ b/styles/layout/custom.scss
@@ -610,3 +610,12 @@ $spacing-sizes: (
 .p-multiselect:not(.p-disabled):hover{
   border-color: #DF177C;
 }
+.mx-collapsed {
+  margin-left: 0.45rem !important;
+  margin-right: -0.75rem !important;
+}
+
+.mx-default {
+  margin-left: 0.25rem !important;
+  margin-right: 0.25rem !important;
+}
